Added short summary of found correlations from physiological T2D perspective

--- a/eda_v01.ipynb
+++ b/eda_v01.ipynb
@@ -1148,12 +1148,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b03e4a5e",
+   "cell_type": "markdown",
+   "id": "529d509d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 🧬 Correlation Analysis of Metabolites in the Context of Type 2 Diabetes\n",
+    "\n",
+    "This summary highlights the strongest correlations (|r| ≥ 0.4) among metabolites in your dataset, with a focus on their physiological and clinical relevance to **Type 2 Diabetes (T2D)**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔁 1. Hexose Sugars: Glucose, Galactose, Mannose, Allose\n",
+    "\n",
+    "- **Observation**: Extremely strong correlations (r ≥ 0.9) among these simple sugars.\n",
+    "- **T2D Relevance**:\n",
+    "  - Reflects **glycemic dysregulation** — elevated glucose often parallels increases in other hexoses.\n",
+    "  - **Mannose** is a recognized **biomarker of hepatic insulin resistance**.\n",
+    "  - **Galactose** and **Allose** may be elevated through altered fructose/lactose metabolism, common in insulin resistance.\n",
+    "\n",
+    "> **Interpretation**: These correlations likely reflect impaired **glucose homeostasis**, a hallmark of T2D.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧪 2. Indole-3-acetaldehyde & Sugars\n",
+    "\n",
+    "- **Observation**: Strongly correlated with glucose, galactose, mannose, and allose (r ≈ 0.9).\n",
+    "- **T2D Relevance**:\n",
+    "  - Indole-3-acetaldehyde is a **tryptophan-derived microbial metabolite**.\n",
+    "  - In T2D, the **gut microbiome is frequently altered**, and related indole derivatives (e.g., indole-3-acetic acid) are often lower.\n",
+    "  - High correlations may reflect metabolic co-regulation under hyperglycemic conditions or microbial adaptation to dietary sugars.\n",
+    "\n",
+    "> **Interpretation**: Suggests a possible interaction between **microbiota-derived amino acid metabolites** and host sugar metabolism in T2D.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 💪 3. Branched-Chain Amino Acids (BCAAs): Valine & Leucine\n",
+    "\n",
+    "- **Observation**: Very strong correlation (r ≈ 0.96).\n",
+    "- **T2D Relevance**:\n",
+    "  - Elevated BCAAs are **well-established markers** of insulin resistance and metabolic inflexibility.\n",
+    "  - BCAAs influence **mTOR signaling**, **lipid accumulation**, and **mitochondrial stress**, all contributing to T2D progression.\n",
+    "\n",
+    "> **Interpretation**: Reinforces the role of **BCAAs as early indicators of insulin resistance** and systemic metabolic dysfunction in T2D.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📌 Summary Table\n",
+    "\n",
+    "| Cluster       | Metabolites                            | Biological Interpretation                                     |\n",
+    "|---------------|----------------------------------------|---------------------------------------------------------------|\n",
+    "| Hexoses       | Glucose, Mannose, Galactose, Allose    | Reflect altered sugar handling and insulin resistance         |\n",
+    "| Microbial-AAs | Indole-3-acetaldehyde + various sugars | Suggests gut-liver axis involvement in metabolic shifts       |\n",
+    "| BCAAs         | Valine, Leucine                        | Strong link to insulin resistance and metabolic inflexibility |\n",
+    "\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
