--- a/eda_v01.ipynb
+++ b/eda_v01.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b100c526",
+   "metadata": {},
+   "source": [
+    "## Part 1: Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f836167",
    "metadata": {},
    "source": [
@@ -10,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "9aeeda61",
    "metadata": {},
    "outputs": [],
@@ -24,7 +32,6 @@
     "from scipy.stats import shapiro\n",
     "from scipy.stats import mannwhitneyu\n",
     "from statsmodels.stats.multitest import multipletests\n",
-    "import statsmodels.api as sm\n",
     "from sklearn.impute import SimpleImputer\n",
     "import networkx as nx\n",
     "from networkx.algorithms.community import greedy_modularity_communities"
