--- a/eda_v01.ipynb
+++ b/eda_v01.ipynb
@@ -2,6 +2,60 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "78d40968",
+   "metadata": {},
+   "source": [
+    "# 🧪 Exploratory Data Analysis: Metabolomic Signatures in Type 2 Diabetes (T2D)\n",
+    "\n",
+    "This notebook presents a comprehensive **exploratory data analysis (EDA)** of a metabolomics dataset focused on **Type 2 Diabetes (T2D)**. The aim is to uncover patterns, correlations, and biologically meaningful relationships between various metabolites and disease status. The analysis is intended as a foundational step toward building predictive models and gaining biological insight into T2D.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📌 Key Components\n",
+    "\n",
+    "- **🔢 Dataset Overview**: Summary of data structure, sample size, feature distribution, and initial cleaning steps.\n",
+    "- **📊 Correlation Analysis**: Pairwise Pearson correlations between metabolites, highlighting those with |r| ≥ 0.4.\n",
+    "- **🧬 Biological Interpretation**: Annotated interpretation of top metabolite correlations, with potential mechanistic links to insulin resistance, glycemic control, lipid metabolism, and gut microbial activity.\n",
+    "- **📈 Feature Relevance for Modeling**: Findings help identify biologically relevant and statistically significant features for downstream machine learning or statistical modeling.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📁 Dataset Details\n",
+    "\n",
+    "The dataset consists of metabolite concentration measurements from a cohort of individuals classified by T2D disease status. Each feature represents a metabolite measured using high-throughput mass spectrometry. The dataset may include missing values, outliers, and varying data scales, all of which are handled during preprocessing.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧭 Methodological Approach\n",
+    "\n",
+    "- Data inspection and validation\n",
+    "- Correlation heatmap and feature-level analysis\n",
+    "- Manual annotation of top correlations\n",
+    "- Preliminary statistical testing for group-level differences (e.g., Mann–Whitney U test)\n",
+    "- Optional SHAP-based feature interpretability (if modeling is extended)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎯 Objective\n",
+    "\n",
+    "To identify metabolomic features that differ meaningfully between individuals with and without T2D, and to generate hypotheses for future biomarker discovery or predictive modeling.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧾 Credits and Funding (if applicable)\n",
+    "\n",
+    "*This analysis is part of an independent research exploration into metabolomic signatures of Type 2 Diabetes. Please cite the original data source or publication if reusing the data.*\n",
+    "\n",
+    "Source: https://www.metabolomicsworkbench.org/\n",
+    "\n",
+    "---\n",
+    "\n",
+    "*Author: [Tomasz Lasota]*  \n",
+    "*Date: [2025-06-29]*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b100c526",
    "metadata": {},
    "source": [
