Added notebook summary markdown

--- a/ML_pipeline.ipynb
+++ b/ML_pipeline.ipynb
@@ -2,6 +2,62 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a31b6f04",
+   "metadata": {},
+   "source": [
+    "# 🤖 Machine Learning Pipeline: Predicting Type 2 Diabetes (T2D) from Metabolomic Profiles\n",
+    "\n",
+    "This notebook is Part 2 of a two-part analysis exploring metabolomic data associated with **Type 2 Diabetes (T2D)**. Building on the previous exploratory data analysis (EDA), this notebook implements a **machine learning (ML) pipeline** for classification using engineered and biologically annotated metabolite features.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧰 Key Components\n",
+    "\n",
+    "- **⚙️ Data Preparation**:  \n",
+    "  Preprocessing pipeline includes median imputation and standard scaling.\n",
+    "\n",
+    "- **🔍 Feature Set**:  \n",
+    "  Input features are derived from curated metabolite measurements, with \"Class\" used as the binary T2D target label.\n",
+    "\n",
+    "- **🧪 Model Training & Evaluation**:  \n",
+    "  A **logistic regression model with elastic net regularization** is trained using a nested cross-validation strategy:\n",
+    "  - Inner 3-fold Stratified CV for hyperparameter tuning (GridSearchCV).\n",
+    "  - Outer 3-fold Stratified CV for robust model evaluation.\n",
+    "\n",
+    "- **📊 Performance Metrics**:  \n",
+    "  - Confusion matrix and classification report  \n",
+    "  - ROC AUC score  \n",
+    "  - ROC and Precision–Recall curves\n",
+    "\n",
+    "- **🧠 Interpretability (Optional)**:  \n",
+    "  Includes SHAP value computation for post hoc model interpretation and feature importance analysis (if enabled).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📁 Dataset Summary\n",
+    "\n",
+    "The dataset used (`ST001906_1.csv`) includes high-resolution metabolomic profiles labeled by T2D status. Each row represents a sample, and columns correspond to metabolite concentrations. The target variable is a binary label indicating disease presence.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎯 Objective\n",
+    "\n",
+    "To train and validate a predictive model for Type 2 Diabetes based on metabolomic data, while ensuring interpretability and generalizability using rigorous cross-validation. This work sets the stage for future development of diagnostic tools or biological hypothesis testing.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧾 Credits and Notes\n",
+    "\n",
+    "*This notebook continues from Part 1 (EDA) and assumes pre-existing knowledge of the dataset and its biological context. Please cite original sources when reusing data or referencing this pipeline.*\n",
+    "\n",
+    "---\n",
+    "\n",
+    "*Author: [Tomasz Lasota]*  \n",
+    "*Date: [2025-06-29]*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b7de0830",
    "metadata": {},
    "source": [
