formatted style using black

--- a/ML_pipeline.ipynb
+++ b/ML_pipeline.ipynb
@@ -86,7 +86,14 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import roc_auc_score, classification_report, confusion_matrix, roc_curve, precision_recall_curve, auc\n",
+    "from sklearn.metrics import (\n",
+    "    roc_auc_score,\n",
+    "    classification_report,\n",
+    "    confusion_matrix,\n",
+    "    roc_curve,\n",
+    "    precision_recall_curve,\n",
+    "    auc,\n",
+    ")\n",
     "from sklearn.model_selection import GridSearchCV, StratifiedKFold, cross_val_score\n",
     "from pathlib import Path\n",
     "import shap\n",
@@ -243,13 +250,20 @@
    "outputs": [],
    "source": [
     "# Define the ML pipeline\n",
-    "pipeline = Pipeline([\n",
-    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "    (\"classifier\", LogisticRegression(penalty=\"elasticnet\",\n",
-    "                                      solver=\"saga\",\n",
-    "                                      max_iter=10000,))\n",
-    "])\n",
+    "pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "        (\"scaler\", StandardScaler()),\n",
+    "        (\n",
+    "            \"classifier\",\n",
+    "            LogisticRegression(\n",
+    "                penalty=\"elasticnet\",\n",
+    "                solver=\"saga\",\n",
+    "                max_iter=10000,\n",
+    "            ),\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "# Define the hyperparameter grid\n",
     "param_grid = {\n",
@@ -283,21 +297,23 @@
     "    y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
     "\n",
     "    # Define GridSearchCV object\n",
-    "    grid_search = GridSearchCV(estimator=pipeline, \n",
-    "                            param_grid=param_grid, \n",
-    "                            cv=inner_cv, \n",
-    "                            scoring=\"roc_auc\", \n",
-    "                            n_jobs=-1)\n",
+    "    grid_search = GridSearchCV(\n",
+    "        estimator=pipeline,\n",
+    "        param_grid=param_grid,\n",
+    "        cv=inner_cv,\n",
+    "        scoring=\"roc_auc\",\n",
+    "        n_jobs=-1,\n",
+    "    )\n",
     "    grid_search.fit(X_train, y_train)\n",
     "\n",
     "    best_model = grid_search.best_estimator_\n",
     "    y_pred = best_model.predict(X_test)\n",
     "    y_prob = best_model.predict_proba(X_test)[:, 1]\n",
-    "    \n",
+    "\n",
     "    # Save predictions\n",
     "    all_y_true.extend(y_test)\n",
     "    all_y_pred.extend(y_pred)\n",
-    "    all_y_prob.extend(y_prob)\n"
+    "    all_y_prob.extend(y_prob)"
    ]
   },
   {
@@ -355,15 +371,19 @@
    ],
    "source": [
     "# Set black-and-white publication style\n",
-    "sns.set_theme(style=\"white\", context=\"talk\", rc={\n",
-    "    \"axes.edgecolor\": \"black\",\n",
-    "    \"xtick.color\": \"black\",\n",
-    "    \"ytick.color\": \"black\",\n",
-    "    \"axes.labelcolor\": \"black\",\n",
-    "    \"text.color\": \"black\",\n",
-    "    \"axes.spines.top\": False,\n",
-    "    \"axes.spines.right\": False\n",
-    "})\n",
+    "sns.set_theme(\n",
+    "    style=\"white\",\n",
+    "    context=\"talk\",\n",
+    "    rc={\n",
+    "        \"axes.edgecolor\": \"black\",\n",
+    "        \"xtick.color\": \"black\",\n",
+    "        \"ytick.color\": \"black\",\n",
+    "        \"axes.labelcolor\": \"black\",\n",
+    "        \"text.color\": \"black\",\n",
+    "        \"axes.spines.top\": False,\n",
+    "        \"axes.spines.right\": False,\n",
+    "    },\n",
+    ")\n",
     "plt.rcParams[\"axes.spines.top\"] = False\n",
     "plt.rcParams[\"axes.spines.right\"] = False\n",
     "\n",
@@ -379,18 +399,32 @@
     "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
     "\n",
     "# --- ROC Curve ---\n",
-    "axes[0].plot(fpr, tpr, linestyle='-', color='black', linewidth=2, label=f'ROC AUC = {roc_auc:.3f}')\n",
-    "axes[0].plot([0, 1], [0, 1], linestyle='--', color='gray')\n",
-    "axes[0].set_xlabel('False Positive Rate')\n",
-    "axes[0].set_ylabel('True Positive Rate')\n",
-    "axes[0].set_title('Receiver Operating Characteristic')\n",
+    "axes[0].plot(\n",
+    "    fpr,\n",
+    "    tpr,\n",
+    "    linestyle=\"-\",\n",
+    "    color=\"black\",\n",
+    "    linewidth=2,\n",
+    "    label=f\"ROC AUC = {roc_auc:.3f}\",\n",
+    ")\n",
+    "axes[0].plot([0, 1], [0, 1], linestyle=\"--\", color=\"gray\")\n",
+    "axes[0].set_xlabel(\"False Positive Rate\")\n",
+    "axes[0].set_ylabel(\"True Positive Rate\")\n",
+    "axes[0].set_title(\"Receiver Operating Characteristic\")\n",
     "axes[0].legend(loc=\"lower right\", frameon=False)\n",
     "\n",
     "# --- PR Curve ---\n",
-    "axes[1].plot(recall, precision, linestyle='-', color='black', linewidth=2, label=f'PR AUC = {pr_auc:.3f}')\n",
-    "axes[1].set_xlabel('Recall')\n",
-    "axes[1].set_ylabel('Precision')\n",
-    "axes[1].set_title('Precision–Recall Curve')\n",
+    "axes[1].plot(\n",
+    "    recall,\n",
+    "    precision,\n",
+    "    linestyle=\"-\",\n",
+    "    color=\"black\",\n",
+    "    linewidth=2,\n",
+    "    label=f\"PR AUC = {pr_auc:.3f}\",\n",
+    ")\n",
+    "axes[1].set_xlabel(\"Recall\")\n",
+    "axes[1].set_ylabel(\"Precision\")\n",
+    "axes[1].set_title(\"Precision–Recall Curve\")\n",
     "axes[1].legend(loc=\"lower left\", frameon=False)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -442,19 +476,26 @@
     }
    ],
    "source": [
-    "# Compute feature importance \n",
+    "# Compute feature importance\n",
     "best_C = grid_search.best_params_[\"classifier__C\"]\n",
     "best_l1 = grid_search.best_params_[\"classifier__l1_ratio\"]\n",
     "\n",
-    "final_pipeline = Pipeline([\n",
-    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "    (\"classifier\", LogisticRegression(penalty=\"elasticnet\",\n",
-    "                                      solver=\"saga\",\n",
-    "                                      max_iter=10000,\n",
-    "                                      C=best_C,\n",
-    "                                      l1_ratio=best_l1))\n",
-    "])\n",
+    "final_pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "        (\"scaler\", StandardScaler()),\n",
+    "        (\n",
+    "            \"classifier\",\n",
+    "            LogisticRegression(\n",
+    "                penalty=\"elasticnet\",\n",
+    "                solver=\"saga\",\n",
+    "                max_iter=10000,\n",
+    "                C=best_C,\n",
+    "                l1_ratio=best_l1,\n",
+    "            ),\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "final_pipeline.fit(X, y)\n",
     "\n",
@@ -462,11 +503,9 @@
     "feature_names = X.columns\n",
     "\n",
     "# Combine with feature names\n",
-    "coef_df = pd.DataFrame({\n",
-    "    'Metabolite': X.columns,\n",
-    "    'Coefficient': coefs,\n",
-    "    'AbsCoefficient': np.abs(coefs)\n",
-    "}).sort_values(by='AbsCoefficient', ascending=False)\n",
+    "coef_df = pd.DataFrame(\n",
+    "    {\"Metabolite\": X.columns, \"Coefficient\": coefs, \"AbsCoefficient\": np.abs(coefs)}\n",
+    ").sort_values(by=\"AbsCoefficient\", ascending=False)\n",
     "\n",
     "print(coef_df.head(30))"
    ]
@@ -498,15 +537,22 @@
     "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "    y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
     "\n",
-    "    final_pipeline = Pipeline([\n",
-    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "    (\"classifier\", LogisticRegression(penalty=\"elasticnet\",\n",
-    "                                      solver=\"saga\",\n",
-    "                                      max_iter=10000,\n",
-    "                                      C=best_C,\n",
-    "                                      l1_ratio=best_l1)),\n",
-    "    ])\n",
+    "    final_pipeline = Pipeline(\n",
+    "        [\n",
+    "            (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "            (\"scaler\", StandardScaler()),\n",
+    "            (\n",
+    "                \"classifier\",\n",
+    "                LogisticRegression(\n",
+    "                    penalty=\"elasticnet\",\n",
+    "                    solver=\"saga\",\n",
+    "                    max_iter=10000,\n",
+    "                    C=best_C,\n",
+    "                    l1_ratio=best_l1,\n",
+    "                ),\n",
+    "            ),\n",
+    "        ]\n",
+    "    )\n",
     "\n",
     "    final_pipeline.fit(X_train, y_train)\n",
     "    y_prob = final_pipeline.predict_proba(X_test)[:, 1]\n",
@@ -519,7 +565,7 @@
     "n_permutations = 1000\n",
     "permuted_aucs = []\n",
     "\n",
-    "#Simulate a null model\n",
+    "# Simulate a null model\n",
     "for i in range(n_permutations):\n",
     "    y_perm = np.random.permutation(y)\n",
     "    perm_preds = []\n",
@@ -529,15 +575,22 @@
     "        X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "        y_train, y_test = y_perm[train_idx], y_perm[test_idx]\n",
     "\n",
-    "        final_pipeline = Pipeline([\n",
-    "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "        (\"scaler\", StandardScaler()),\n",
-    "        (\"classifier\", LogisticRegression(penalty=\"elasticnet\",\n",
-    "                                        solver=\"saga\",\n",
-    "                                        max_iter=10000,\n",
-    "                                        C=best_C,\n",
-    "                                        l1_ratio=best_l1)),\n",
-    "        ])\n",
+    "        final_pipeline = Pipeline(\n",
+    "            [\n",
+    "                (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "                (\"scaler\", StandardScaler()),\n",
+    "                (\n",
+    "                    \"classifier\",\n",
+    "                    LogisticRegression(\n",
+    "                        penalty=\"elasticnet\",\n",
+    "                        solver=\"saga\",\n",
+    "                        max_iter=10000,\n",
+    "                        C=best_C,\n",
+    "                        l1_ratio=best_l1,\n",
+    "                    ),\n",
+    "                ),\n",
+    "            ]\n",
+    "        )\n",
     "        final_pipeline.fit(X_train, y_train)\n",
     "        y_prob = final_pipeline.predict_proba(X_test)[:, 1]\n",
     "        perm_preds.extend(y_prob)\n",
@@ -590,21 +643,28 @@
     "\n",
     "    X_boot = X.iloc[indices]\n",
     "    y_boot = y.iloc[indices]\n",
-    "    \n",
+    "\n",
     "    # Make sure there are both classes in the bootstrap sample\n",
     "    if len(np.unique(y_boot)) < 2 or len(oob_indices) == 0:\n",
     "        continue\n",
     "\n",
     "    # Fit pipeline on bootstrap sample\n",
-    "    final_pipeline = Pipeline([\n",
-    "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "        (\"scaler\", StandardScaler()),\n",
-    "        (\"classifier\", LogisticRegression(penalty=\"elasticnet\",\n",
-    "                                        solver=\"saga\",\n",
-    "                                        max_iter=10000,\n",
-    "                                        C=best_C,\n",
-    "                                        l1_ratio=best_l1)),\n",
-    "        ])\n",
+    "    final_pipeline = Pipeline(\n",
+    "        [\n",
+    "            (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "            (\"scaler\", StandardScaler()),\n",
+    "            (\n",
+    "                \"classifier\",\n",
+    "                LogisticRegression(\n",
+    "                    penalty=\"elasticnet\",\n",
+    "                    solver=\"saga\",\n",
+    "                    max_iter=10000,\n",
+    "                    C=best_C,\n",
+    "                    l1_ratio=best_l1,\n",
+    "                ),\n",
+    "            ),\n",
+    "        ]\n",
+    "    )\n",
     "    final_pipeline.fit(X_boot, y_boot)\n",
     "\n",
     "    # Predict on out-of-bag (OOB) samples — optional but skipped here\n",
@@ -640,13 +700,13 @@
     }
    ],
    "source": [
-    "plt.hist(boot_aucs, bins=30, color='skyblue', edgecolor='black')\n",
-    "plt.axvline(lower, color='red', linestyle='--', label='2.5% CI')\n",
-    "plt.axvline(upper, color='red', linestyle='--', label='97.5% CI')\n",
-    "plt.axvline(np.mean(boot_aucs), color='green', linestyle='-', label='Mean AUC')\n",
-    "plt.title('Bootstrapped AUC Distribution')\n",
-    "plt.xlabel('AUC')\n",
-    "plt.ylabel('Frequency')\n",
+    "plt.hist(boot_aucs, bins=30, color=\"skyblue\", edgecolor=\"black\")\n",
+    "plt.axvline(lower, color=\"red\", linestyle=\"--\", label=\"2.5% CI\")\n",
+    "plt.axvline(upper, color=\"red\", linestyle=\"--\", label=\"97.5% CI\")\n",
+    "plt.axvline(np.mean(boot_aucs), color=\"green\", linestyle=\"-\", label=\"Mean AUC\")\n",
+    "plt.title(\"Bootstrapped AUC Distribution\")\n",
+    "plt.xlabel(\"AUC\")\n",
+    "plt.ylabel(\"Frequency\")\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -669,7 +729,7 @@
    ],
    "source": [
     "# Extract the scaler and the logistic regression model\n",
-    "scaler = final_pipeline.named_steps['scaler']\n",
+    "scaler = final_pipeline.named_steps[\"scaler\"]\n",
     "model = final_pipeline.named_steps[\"classifier\"]\n",
     "\n",
     "# Scale the data\n",
@@ -701,17 +761,19 @@
    ],
    "source": [
     "# Set black and white style manually\n",
-    "plt.rcParams.update({\n",
-    "    \"axes.edgecolor\": \"black\",\n",
-    "    \"axes.labelcolor\": \"black\",\n",
-    "    \"xtick.color\": \"black\",\n",
-    "    \"ytick.color\": \"black\",\n",
-    "    \"axes.facecolor\": \"white\",\n",
-    "    \"figure.facecolor\": \"white\",\n",
-    "    \"grid.color\": \"lightgray\",\n",
-    "    \"text.color\": \"black\",\n",
-    "    \"font.size\": 11\n",
-    "})\n",
+    "plt.rcParams.update(\n",
+    "    {\n",
+    "        \"axes.edgecolor\": \"black\",\n",
+    "        \"axes.labelcolor\": \"black\",\n",
+    "        \"xtick.color\": \"black\",\n",
+    "        \"ytick.color\": \"black\",\n",
+    "        \"axes.facecolor\": \"white\",\n",
+    "        \"figure.facecolor\": \"white\",\n",
+    "        \"grid.color\": \"lightgray\",\n",
+    "        \"text.color\": \"black\",\n",
+    "        \"font.size\": 11,\n",
+    "    }\n",
+    ")\n",
     "\n",
     "shap.summary_plot(\n",
     "    shap_values,\n",
@@ -719,7 +781,7 @@
     "    feature_names=X.columns,\n",
     "    plot_type=\"bar\",\n",
     "    color=\"black\",\n",
-    "    show=False\n",
+    "    show=False,\n",
     ")\n",
     "\n",
     "plt.title(\"SHAP Feature Importance\", fontsize=13)\n",
