Refactor: changed imports formatting

--- a/eda_v01.ipynb
+++ b/eda_v01.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "id": "9aeeda61",
    "metadata": {},
    "outputs": [],
@@ -84,9 +84,7 @@
     "from matplotlib.ticker import ScalarFormatter\n",
     "import seaborn as sns\n",
     "import math\n",
-    "from scipy.stats import shapiro\n",
-    "from scipy.stats import mannwhitneyu\n",
-    "from scipy.stats import norm\n",
+    "from scipy.stats import shapiro, mannwhitneyu, norm\n",
     "from statsmodels.stats.multitest import multipletests\n",
     "from sklearn.impute import SimpleImputer\n",
     "import networkx as nx\n",
