Refactor: imports formatting using black

--- a/ML_pipeline.ipynb
+++ b/ML_pipeline.ipynb
@@ -79,25 +79,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import (\n",
-    "    roc_auc_score,\n",
-    "    classification_report,\n",
-    "    confusion_matrix,\n",
-    "    roc_curve,\n",
-    "    precision_recall_curve,\n",
-    "    auc,\n",
-    ")\n",
-    "from sklearn.model_selection import GridSearchCV, StratifiedKFold, cross_val_score\n",
     "from pathlib import Path\n",
-    "import shap\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import shap\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import (auc, classification_report, confusion_matrix,\n",
+    "                             precision_recall_curve, roc_auc_score, roc_curve)\n",
+    "from sklearn.model_selection import (GridSearchCV, StratifiedKFold,\n",
+    "                                     cross_val_score)\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from tabulate import tabulate"
    ]
   },
