--- a/eda_v01.ipynb
+++ b/eda_v01.ipynb
@@ -77,21 +77,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.ticker import ScalarFormatter\n",
-    "import seaborn as sns\n",
     "import math\n",
-    "from scipy.stats import shapiro, mannwhitneyu, norm\n",
-    "from statsmodels.stats.multitest import multipletests\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "import networkx as nx\n",
-    "from networkx.algorithms.community import greedy_modularity_communities\n",
     "from itertools import product\n",
-    "from tabulate import tabulate\n",
-    "from statannotations.Annotator import Annotator"
+    "from pathlib import Path\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from matplotlib.ticker import ScalarFormatter\n",
+    "from networkx.algorithms.community import greedy_modularity_communities\n",
+    "from scipy.stats import mannwhitneyu, norm, shapiro\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from statannotations.Annotator import Annotator\n",
+    "from statsmodels.stats.multitest import multipletests\n",
+    "from tabulate import tabulate"
    ]
   },
   {
@@ -102,6 +103,8 @@
    "outputs": [],
    "source": [
     "# Define class for handling notebook and dataset imports and settings\n",
+    "\n",
+    "\n",
     "class CF:\n",
     "\n",
     "    def __init__(self):\n",
@@ -4319,6 +4322,7 @@
    ],
    "source": [
     "### 2. Biological inference\n",
+    "\n",
     "\n",
     "significant_metabolites = signinificant_features[\"Feature\"].values\n",
     "control = df[df[\"Class\"] == 0].drop(columns=[\"ID\"])\n",
